--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -1,12 +1,16 @@
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Teams</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list>
+    <button *ngFor="let team of teams" ion-item (click)="itemTapped($event, team)">
+      {{team.name}}
+    </button>
+  </ion-list>
 </ion-content>
