Included the firebase service

--- a/src/pages/tournaments/tournaments.html
+++ b/src/pages/tournaments/tournaments.html
@@ -9,11 +9,8 @@
 
 <ion-content>
   <ion-list>
-    <button ion-item (click)="itemTapped()">
-      March Madness Tournament
-    </button>
-    <button ion-item (click)="itemTapped()">
-      Summer Showdown Tournament
+    <button *ngFor="let item of tournaments" ion-item (click)="itemTapped($event, item)">
+      {{item.name}}
     </button>
   </ion-list>
 </ion-content>
