--- a/src/pages/team-detail/team-detail.html
+++ b/src/pages/team-detail/team-detail.html
@@ -6,6 +6,9 @@
 
 
 <ion-content padding>
-  <h2>Team Details</h2>
-  <h2>Name: {{team.name}}</h2>
+  <ion-list>
+    <ion-item *ngFor="let game of games" (click)="gameClicked($event, game)">
+      {{game.opponent}}
+    </ion-item>
+  </ion-list>
 </ion-content>
