--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -10,9 +10,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <p>You are not currently following any teams.</p>
-  <p>First select a tournament, then you can follow teams from their team page.</p>
+<ion-content>
+  <ion-list>
+    <ion-list-header>Followed Teams</ion-list-header>
+    <button ion-item *ngFor="let item of favorites" (click)="favoriteTapped($event, item)">
+      <ion-icon name="star"></ion-icon>
+      {{item.team.name}}
+      <p>{{item.tournamentName}}</p>
+    </button>
+  </ion-list>
+
 
   <button ion-button full (click)="goToTournaments()">Find a Tournament</button>
 </ion-content>
