--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -11,18 +11,36 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <ion-list-header>Followed Teams</ion-list-header>
-    <button ion-item *ngFor="let item of favorites" (click)="favoriteTapped($event, item)">
-      <ion-icon name="star"></ion-icon>
-      {{item.team.name}}
-      <p>{{item.tournamentName}}</p>
-    </button>
-  </ion-list>
+
+  <ion-card *ngIf="!favorites">
+    <ion-card-header class="my-teams-header">No Followed Teams</ion-card-header>
+    <ion-card-content>
+      <p>You are not currently following any teams.</p>
+      <p>First select a tornament, then you can follow teams from their team page.</p>
+      <button ion-button icon-left full (click)="goToTournaments()">
+        <ion-icon name="search"></ion-icon>
+        Find a Tournament
+      </button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="favorites">
+    <ion-list>
+      <ion-list-header class="my-teams-header">Followed Teams</ion-list-header>
+      <button ion-item *ngFor="let item of favorites" (click)="favoriteTapped($event, item)">
+        <ion-icon name="star"></ion-icon>
+        {{item.team.name}}
+        <p>{{item.tournamentName}}</p>
+      </button>
+    </ion-list>
+    <ion-card-content>
+      <p>To follow more teams, select a tornament, then you can follow more teams from their team page.</p>
+      <button ion-button icon-left full (click)="goToTournaments()">
+        <ion-icon name="search"></ion-icon>
+        Find a Tournament
+      </button>
+    </ion-card-content>
+  </ion-card>
 
 
-  <button ion-button icon-left full (click)="goToTournaments()">
-    <ion-icon name="search"></ion-icon>
-    Find a Tournament
-  </button>
 </ion-content>
