--- a/src/pages/team-detail/team-detail.html
+++ b/src/pages/team-detail/team-detail.html
@@ -5,10 +5,40 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-card>
+    <ion-card-content>
+      <ion-row>
+        <ion-col>
+          <h2>Record: {{teamStanding.wins}}-{{teamStanding.losses}}</h2>
+          <p>Coach: {{team.coach}}</p>
+        </ion-col>
+        <ion-col>
+
+        </ion-col>
+      </ion-row>
+      <ion-item>
+        <ion-label>DateFilter</ion-label>
+        <ion-datetime displayormat="M/D/YYYY" pickerFormat="M/D/YYYY" [(ngModel)]="dateFilter"></ion-datetime>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
   <ion-list>
     <ion-item *ngFor="let game of games" (click)="gameClicked($event, game)">
-      {{game.opponent}}
+      <ion-row>
+        <ion-col col-3>
+          <p>{{game.time | date:'m/d/yy'}}</p>
+          <p>{{game.time | date:'shortTime'}}</p>
+        </ion-col>
+        <ion-col col-6>
+          <p>{{game.homeAway}} {{game.opponent}}</p>
+          <p>{{game.location}}</p>
+        </ion-col>
+        <ion-col col-3>
+          <h4>{{game.scoreDisplay}}</h4>
+        </ion-col>
+      </ion-row>
     </ion-item>
   </ion-list>
 </ion-content>
