--- a/src/pages/team-detail/team-detail.html
+++ b/src/pages/team-detail/team-detail.html
@@ -9,17 +9,24 @@
   <ion-card>
     <ion-card-content>
       <ion-row>
-        <ion-col>
+        <ion-col col-6>
           <h2>Record: {{teamStanding.wins}}-{{teamStanding.losses}}</h2>
           <p>Coach: {{team.coach}}</p>
         </ion-col>
-        <ion-col>
-
+        <ion-col col-6 text-right>
+          <button ion-button icon-left outline (click)="toggleFollow()" *ngIf="!isFollowing">
+            <ion-icon name="star"></ion-icon>
+            Add Favorite
+          </button>
+          <button ion-button icon-only (click)="toggleFollow()" *ngIf="isFollowing">
+            <ion-icon name="star"></ion-icon>
+          </button>
         </ion-col>
       </ion-row>
       <ion-item>
         <ion-label>DateFilter</ion-label>
-        <ion-datetime displayormat="M/D/YYYY" pickerFormat="M/D/YYYY" [(ngModel)]="dateFilter"></ion-datetime>
+        <ion-toggle [(ngModel)]="useDateFilter" (ionChange)="dateChanged()"></ion-toggle>
+        <ion-datetime displayormat="M/D/YYYY" pickerFormat="M/D/YYYY" [(ngModel)]="dateFilter" (ionChange)="dateChanged()" [(disabled)]="!useDateFilter"></ion-datetime>
       </ion-item>
     </ion-card-content>
   </ion-card>
@@ -28,7 +35,7 @@
     <ion-item *ngFor="let game of games" (click)="gameClicked($event, game)">
       <ion-row>
         <ion-col col-3>
-          <p>{{game.time | date:'m/d/yy'}}</p>
+          <p>{{game.time | date:'M/d/yy'}}</p>
           <p>{{game.time | date:'shortTime'}}</p>
         </ion-col>
         <ion-col col-6>
@@ -37,6 +44,7 @@
         </ion-col>
         <ion-col col-3>
           <h4>{{game.scoreDisplay}}</h4>
+          <ion-badge [color]="getScoreDisplayBadgeClass(game)">{{getScoreWorL(game)}}</ion-badge>
         </ion-col>
       </ion-row>
     </ion-item>
