Added pull to refresh on team-details page

--- a/src/pages/team-detail/team-detail.html
+++ b/src/pages/team-detail/team-detail.html
@@ -6,6 +6,11 @@
 
 
 <ion-content>
+
+  <ion-refresher (ionrefresh)="refreshAll($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-card>
     <ion-card-content>
       <ion-row>
